syntax = "proto3";

package schema;

enum FType {
    INT8 = 0;
    INT16 = 1;
    INT32 = 2;
    INT64 = 3;

    FLOAT = 101;
    HALFFLOAT = 102;
    DOUBLE = 103;

    STRING = 201;

    VECTOR = 301;

    UNKOWN = 9999;
}

message ParamPB {
    string key = 1;
    string value = 2;
}

message FieldElementInfoPB {
    int32 type = 1;
    repeated ParamPB params = 2;
}

message FieldElementSchemaPB {
    uint64 id = 1;
    int32 num = 2;
    string name = 3;
    FieldElementInfoPB info = 4;
}

message FieldInfoPB {
    FType type = 1;
    repeated ParamPB params = 2;
}

message FieldSchemaPB {
    uint64 id = 1;
    int32 num = 2;
    string name = 3;
    FieldInfoPB info = 4;
    repeated FieldElementSchemaPB elements = 5;
}

message CollectionSchemaPB {
    uint64 id = 1;
    string name = 2;
    repeated FieldSchemaPB fields = 3;
}
